校验器基本完成

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="jq-validation.css"/>
-    <script src="eg-validation.js"></script>
+
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 
     <div >
         邮箱:
-          <input type="text" id="email" eg-valid="true" name="email" class="error"  eg-qq="qq不正确" eg-email="邮箱不正确"  eg-position="bottom">
+          <input type="text" id="email" eg-valid="true" name="email"  eg-tips="111" eg-qq="qq不正确" eg-email="邮箱不正确"   >
     </div>
         <div >
             身份证
@@ -28,7 +28,7 @@
 
 
     </form>
-    <div id="email-line"></div>
+    <div id="qq-line"></div>
 </div>
 
 
