--- a/test.html
+++ b/test.html
@@ -4,8 +4,9 @@
     <title>Bootstrap Form Template</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="jq-validation.css"/>
-
+    <!--<link rel="stylesheet" type="text/css" href="jq-validation.css"/>-->
+    <script src="jquery-1.11.3.min.js"></script>
+    <script src="eg-validation.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 
@@ -15,14 +16,14 @@
 
     <div >
         邮箱:
-          <input type="text" id="email" eg-valid="true" name="email"  eg-tips="111" eg-qq="qq不正确" eg-email="邮箱不正确"   >
+          <input type="text" id="email" eg-valid="true" name="email"  eg-tips="111" eg-qq  eg-success="校验通过" >
     </div>
         <div >
             身份证
           <input type="text" id="password" eg-required="必填" eg-valid eg-idCard="身份证不正确" eg-position="bottom" >
         </div>
 
-                <button type="submit" class="btn">登录</button>
+        <button type="submit" class="btn">登录</button>
 
 
 
@@ -32,8 +33,7 @@
 </div>
 
 
-<script src="jquery-1.11.3.min.js"></script>
-<script src="eg-validation.js" type="text/javascript" charset="utf-8"></script>
+
 
 <script type="text/javascript" charset="utf-8">
     $(function () {
